--- a/choreography/index.html
+++ b/choreography/index.html
@@ -39,31 +39,31 @@
         <h1>Choreography</h1>
         <div class="choreo-box">
           <div class="copy">
-            <h4>untitled_37.txt </h4>
+            <h4>untitled_37.txt</h4>
             <h6>(2016)</h6>
             <p>
               Choreographed and performed by Emily Hansel<br>
               Computer program by Michael Fix
             </p>
             <p>
-              <i>untitled_37.txt</i> was the culmination of over a year’s worth of 
-              research on the subjectivity of language. Words are not equivalent 
-              to ideas, they simply represent ideas. Words attempt to 
-              accurately portray the abstract in a concrete manner. The research 
+              <i>untitled_37.txt</i> was the culmination of over a year’s worth of
+              research on the subjectivity of language. Words are not equivalent
+              to ideas, they simply represent ideas. Words attempt to
+              accurately portray the abstract in a concrete manner. The research
               developed into an exploration of the human need to make the abstract tangible.
             </p>
             <p>
-              <i>untitled_37.txt</i> premiered on April 27, 2016 at the 
-              University of South Florida. This piece was the fruit of Emily’s 
-              <a href="/assets/thesis.pdf" target="_blank" alt="Honors Thesis">Honors Thesis</a> 
+              <i>untitled_37.txt</i> premiered on April 27, 2016 at the
+              University of South Florida. This piece was the fruit of Emily’s
+              <a href="/assets/thesis.pdf" target="_blank" alt="Honors Thesis">Honors Thesis</a>
               for the Honors College at USF.
-              
             </p>
-          </div><img class="visual" src="../assets/img/choreo/untitled37.png" alt="Untitled_37.txt">
+          </div>
+          <iframe class="visual" src="https://www.youtube.com/embed/S6XhwIM7ZdA?rel=0&amp;amp;showinfo=0" height="240px" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="choreo-box">
           <div class="copy">
-            <h4>No Reason </h4>
+            <h4>No Reason</h4>
             <h6>(2015)</h6>
             <p>
               Choreographed by Emily Hansel for five dancers<br>
@@ -71,21 +71,21 @@
             </p>
             <p>A piece in which there is a reason for everything. An environment in which five movers exist and discover.</p>
             <p>
-              <i>No Reason</i> premiered at the University of South Florida’s 
-              Theatre One in December 2015.  It was later selected to be presented 
-              at the Southeast ACDA Conference in March 2016. 
+              <i>No Reason</i> premiered at the University of South Florida’s
+              Theatre One in December 2015.  It was later selected to be presented
+              at the Southeast ACDA Conference in March 2016.
               
             </p>
           </div><img class="visual" src="../assets/img/choreo/noreason.png" alt="No Reason">
         </div>
         <div class="choreo-box">
-          <div class="copy"> 
-            <h4>Vertical Words </h4>
+          <div class="copy">
+            <h4>Vertical Words</h4>
             <h6>(2015)</h6>
             <p>Choreographed and performed by Emily Hansel at Micadanses in Paris.</p>
             <p>
-              <i>Vertical Words</i> is an attempt to prove that the perception of meaning is 
-              inevitable, regardless of whether or not the artist intended any meaning. The 
+              <i>Vertical Words</i> is an attempt to prove that the perception of meaning is
+              inevitable, regardless of whether or not the artist intended any meaning. The
               choreographic process was inspired by the "word sculptures" of minimalist sculptor, Carl Andre.
             </p>
           </div>
@@ -93,25 +93,25 @@
         </div>
         <div class="choreo-box">
           <div class="copy">
-            <h4>Not Empty </h4>
+            <h4>Not Empty</h4>
             <h6>(2015)</h6>
             <p>Choreographed, performed, and directed by Emily Hansel.</p>
             <p>
-              This film is a response to a performance of Angelin Preljocaj's "Empty Moves" 
+              This film is a response to a performance of Angelin Preljocaj's "Empty Moves"
               (performed by Ballet Preljocaj). The show's program notes included this statement:
             </p>
             <p>
-              “To highlight his process [Preljocaj] turns to John Cage’s "Empty Words," a 
-              random string of phonemes, read by Cage during his performance in Milan – a 
-              demonstrative act to show that the abstract exists and that it is unbearable 
-              to the audience who responds by jeering at the unperturbed performer….[Preljocaj's 
-              four dancers onstage] are paid homage by an audience, who although not 
+              “To highlight his process [Preljocaj] turns to John Cage’s "Empty Words," a
+              random string of phonemes, read by Cage during his performance in Milan – a
+              demonstrative act to show that the abstract exists and that it is unbearable
+              to the audience who responds by jeering at the unperturbed performer….[Preljocaj's
+              four dancers onstage] are paid homage by an audience, who although not
               necessarily willing to listen, has at least agreed to look upon abstraction.”
             </p>
             <p>
-              John Cage and his partner Merce Cunningham were two artists who refused to seduce 
-              audiences through romanticism, narrative, or encoded meanings. They often referred 
-              to their work as "meaningless" or "purposeless." But this attempt to signify nothing 
+              John Cage and his partner Merce Cunningham were two artists who refused to seduce
+              audiences through romanticism, narrative, or encoded meanings. They often referred
+              to their work as "meaningless" or "purposeless." But this attempt to signify nothing
               signifies something. The attempt to remove purpose is a purpose itself.
             </p>
           </div>
@@ -119,19 +119,19 @@
         </div>
         <div class="choreo-box">
           <div class="copy">
-            <h4>Insatiable </h4>
+            <h4>Insatiable</h4>
             <h6>(2015)</h6>
             <p>Choreographed and performed by Emily Hansel and Jessica Zizzo.<br>Music by ltlp, additional audio from Patrick McCarty.</p>
             <p>
-              Insatiable was created in 2015 at the University of South Florida. It is the product of an exploration 
-              of the benefits and downfalls of selfishness and unceasing ambition – such persistence can lead to great 
-              accomplishments as well as disasters. This includes an investigation of Plato and Aristotle’s ideas on 
+              Insatiable was created in 2015 at the University of South Florida. It is the product of an exploration
+              of the benefits and downfalls of selfishness and unceasing ambition – such persistence can lead to great
+              accomplishments as well as disasters. This includes an investigation of Plato and Aristotle’s ideas on
               human appetite (or passion) versus reason (which allegedly governs the passions).
             </p>
             <p>
-              The piece was invited to be performed in a full-scale concert in USF's dance department 
-              as well as other performances at USF. This successful partnership between these two 
-              choreogrpahers has led to further collaboration. Right now, the two are in the process 
+              The piece was invited to be performed in a full-scale concert in USF's dance department
+              as well as other performances at USF. This successful partnership between these two
+              choreogrpahers has led to further collaboration. Right now, the two are in the process
               of creating an e-book which cohesively incorporates dance and poetry (with poetry by Patrick McCarty).
             </p>
           </div>
@@ -139,7 +139,7 @@
         </div>
         <div class="choreo-box">
           <div class="copy">
-            <h4>Scream </h4>
+            <h4>Scream</h4>
             <h6>(2014)</h6>
             <p>
               Choreographed by Emily Hansel.<br>
